...
    override func loadView() {
        super.loadView()
        articlesVM = ArticlesViewModel()
        setupTableView()
        articlesVM?.vc = self
        articlesVM?.getRowsInfoFromAPI()
        self.title = "World News Feed"
        let backBarBtn = UIBarButtonItem()
        backBarBtn.title = "Back"
        navigationItem.backBarButtonItem = backBarBtn
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Refresh", style: .plain, target: self, action: #selector(refreshButtonClicked))
    }
    
    @objc func refreshButtonClicked() {
        articlesVM?.articleArray = [Articles]()
...
